[tool.poetry]
name = "expensetracker"
version = "0.1.0"
description = "Expense Tracker"
authors = ["Joseph Serunjogi <joeseggie@gmail.com>", "Aldo Okware <aldookware@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
cchardet = "^2.1.7"
aiodns = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
